LAW-19 create independ Screens
