# server/controllers/DocProxyTypeAController/docProxyTypeA.router.js
@@ -9,6 +9,5 @@ router.get('/:id', auth, DocProxyTypeAController.findOne);
 router.patch('/:id', auth, DocProxyTypeAController.sendToCheck);
 router.post('/', auth, DocProxyTypeAController.createOne);
 router.post('/:id', auth, existDocTypeAMiddleware, upload.fields([{ name: 'passport', maxCount: 10 }, { name: 'inn', maxCount: 1 }]), DocProxyTypeAController.uploadScreens);
-router.get('/uploads/:img', auth, DocProxyTypeAController.uploads);
 
 module.exports = router;
